[gd_scene load_steps=3 format=3 uid="uid://bnbuo84uf6qat"]

[ext_resource type="Script" uid="uid://dxykujtkps4xt" path="res://scenes/ui/esc_menu.gd" id="1_guea3"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_guea3"]

[node name="EscMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_guea3")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0.28627452, 0.47058824, 0.26666668, 0.3254902)
material = SubResource("CanvasItemMaterial_guea3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -74.5
offset_right = 197.0
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContinue" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "CONTINUE"

[node name="ButtonMainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "MAIN MENU"

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "EXIT
"
